objects/Route_FRAs__c.object
<CustomObject>
    <fields>
        <fullName>Captain_Mitigation__c</fullName>
        <label>Captain Mitigation</label>
        <length>140</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INELIGIBLE_TO_SUBMISSION__c</fullName>
        <defaultValue>false</defaultValue>
        <label>INELIGIBLE TO SUBMISSION</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewer_Mitigation__c</fullName>
        <label>Reviewer Mitigation</label>
        <length>140</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Route_FRAss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_Status__c</fullName>
        <formula>IF(AND(Risk_Total__c = 1), &quot;Safe&quot;,
IF(AND(Risk_Total__c &gt;= 2 &amp;&amp; Risk_Total__c  &lt;= 3), &quot;Warning&quot;,
&quot;Danger&quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Total__c</fullName>
        <label>Risk Total</label>
        <summaryFilterItems>
            <field>Risk_Statement__c.Risk_Level__c</field>
            <operation>equals</operation>
            <value>1, 2, 3</value>
        </summaryFilterItems>
        <summaryForeignKey>Risk_Statement__c.Risk_of_Route__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Risk_count__c</fullName>
        <label>Risk count</label>
        <summaryFilterItems>
            <field>Risk_Statement__c.Risk_Category__c</field>
            <operation>equals</operation>
            <value>Engine, Wheather, People, Other</value>
        </summaryFilterItems>
        <summaryForeignKey>Risk_Statement__c.Risk_of_Route__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <label>Route</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trip_Id__c</fullName>
        <label>Trip Id</label>
        <referenceTo>TRIP__c</referenceTo>
        <relationshipLabel>Route &amp; FRAss</relationshipLabel>
        <relationshipName>Route_FRAss</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Route &amp; FRAs</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>INELIGIBLE_TO_SUBMISSION__c</columns>
        <columns>Risk_count__c</columns>
        <columns>Risk_Status__c</columns>
        <columns>Route__c</columns>
        <columns>Risk_Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Route &amp; FRAs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Route &amp; FRAss</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>